--- a/Quantumult-X/AdBlock.conf
+++ b/Quantumult-X/AdBlock.conf
@@ -1,5 +1,5 @@
 ###主机名
-hostname = *.baidu.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com, mp.weixin.qq.com, app.biliintl.com, app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn
+hostname = *.baidu.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com, mp.weixin.qq.com, app.biliintl.com, app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn,www.zhihu.com, zhuanlan.zhihu.com,
 
 
 
@@ -75,5 +75,13 @@ https://app.bilibili.com/x/v2/splash/(show|list) url reject-dict
 ^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
 # ① 非会员设置tab皮肤 - cherish
 ^https://new.vip.weibo.cn/littleskin/preview url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
+
+
+# 知乎（部分替换为手机百度 Quark 的 User-Agent）
+# 可以看楼层回复 1-2 条
+^https:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 Quark/604.1 T7/10.7 SearchCraft/2.7.7 (Baidu; P1 9.0.0)$2
+# 知乎直接看
+^https://www\.zhihu\.com/question/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
+^https://zhuanlan\.zhihu\.com/p/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
 
 
