--- a/Quantumult-X/UnlockVIP.conf
+++ b/Quantumult-X/UnlockVIP.conf
@@ -5,12 +5,14 @@ hostname = mb3admin.com, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, musicpay
 
 ### Emby解锁播放权限
 ##源地址: https://raw.githubusercontent.com/qiangxinglin/Emby/main/QuantumultX/emby.conf
+# > mb3admin.com
 ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://raw.githubusercontent.com/qiangxinglin/Emby/main/scripts/emby.js
 
 
 
 ###酷我音乐解锁
 #源地址: https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/UnlockVip/Kuwo.conf
+# >  rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, musicpay.kuwo.cn, vip1.kuwo.cn, audiobookpay.kuwo.cn, tingshu.kuwo.cn,omp-audiobookpay.lrts.me,
 # ～ KWYY_酷我音樂Ad_Block@DivineEngine
 ^https?:\/\/rich\.kuwo\.cn\/AdService\/kaiping\/.+ url reject
 # ～ KWYY_酷我音樂Ad_Block@DivineEngine
