--- a/Quantumult-X/AdBlock.conf
+++ b/Quantumult-X/AdBlock.conf
@@ -26,6 +26,7 @@ hostname = *.baidu.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtu
 ###【Bililbili去广告】
 ##源地址：https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/AdBlock/Bilibili.conf
 # > app.biliintl.com, app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com
+# ~ BiliBili_嗶哩嗶哩_热搜发现@ddgksf2013
 https://app.bilibili.com/x/v2/search/square url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
 # ~ BiliBili_嗶哩嗶哩Defaultword@ddgksf2013
 https://app.bilibili.com/x/v2/search/defaultwords url reject-dict
@@ -50,7 +51,7 @@ https://app.bilibili.com/x/v2/splash/(show|list) url reject-dict
 # ~ BiliBili_漫畫去廣告
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/Flash url reject-dict
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/ListFlash url reject-dict
-# ~ BiliBili_推薦去廣告
+# ~ BiliBili_推薦去廣告@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
 # ~ BiliBili_追番去廣告
 ^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
