--- a/Quantumult-X/AdBlock.conf
+++ b/Quantumult-X/AdBlock.conf
@@ -26,6 +26,8 @@ hostname = *.baidu.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtu
 ###【Bililbili去广告】
 ##源地址：https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/AdBlock/Bilibili.conf
 # > app.biliintl.com, app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net
+# ~ BiliBili_嗶哩嗶哩_觀影頁面去廣告@ddgksf2013
+^https?:\/\/api\.bilibili\.com\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
 # ~ BiliBili_嗶哩嗶哩_應用開屏去廣告@bm7
 ^https://app.bilibili.com/x/v2/splash/show url reject-dict
 # ~ BiliBili_嗶哩嗶哩_應用開屏廣告预加载@yjqiang
@@ -58,7 +60,7 @@ hostname = *.baidu.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtu
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
 # ~ BiliBili_嗶哩嗶哩_推薦去廣告@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_追番去廣告@bm7
+# ~ BiliBili_嗶哩嗶哩_追番去廣告@ddgksf2013
 ^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
 # ~ BiliBili_嗶哩嗶哩_直播去廣告@bm7
 ^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
