--- a/Quantumult-X/UnlockVIP.conf
+++ b/Quantumult-X/UnlockVIP.conf
@@ -6,7 +6,7 @@ hostname = mb3admin.com, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, musicpay
 ###【Emby解锁播放权限】
 ##源地址: https://raw.githubusercontent.com/qiangxinglin/Emby/main/QuantumultX/emby.conf
 # > mb3admin.com
-^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://raw.githubusercontent.com/qiangxinglin/Emby/main/scripts/emby.js
+# ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://raw.githubusercontent.com/qiangxinglin/Emby/main/scripts/emby.js
 
 
 
