--- a/Quantumult-X/AdBlock.conf
+++ b/Quantumult-X/AdBlock.conf
@@ -88,6 +88,10 @@ hostname = *.baidu.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtu
 ^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
 # ① 非会员设置tab皮肤 - cherish
 ^https://new.vip.weibo.cn/littleskin/preview url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_main.js
+# 去微博应用内广告 (yichahucha)
+##源地址：https://github.com/yichahucha/surge/tree/master
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/launch.js
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/ad.js
 
 
 ###【知乎】（部分替换为手机百度 Quark 的 User-Agent）
